// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileSliderSkeleton > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with dots 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-3 justify-center mt-3 h-3 leading-3"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton w-3 h-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton w-3 h-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with length 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between items-center p-1 rounded-lg border border-theme-secondary-200 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="w-10 h-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="pr-1.5 mr-1.5 transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
